<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- Application -->
    <string name="app_name">Camera Cleaner</string>
    <string name="hello_world">Hello Camera!</string>
    <string name="preferences_name">com.filutkie.cameracleaner_preferences</string>

    <!-- Fragment -->
    <string name="subheader_folders">Folders</string>
    <string name="subheader_autodelete">Autodelete</string>
    <string name="subheader_history">History</string>
    <string name="notification_show">Show notification</string>
    <string name="notification_icon">Notification icon</string>
    <string name="history_empty">Your history will appear here</string>
    <string name="toast_please_wait">Please wait until panorama processing is finished</string>

    <!-- Actions -->
    <string name="action_cleaned">Cleaned!</string>
    <string name="action_cleaned_notification">cleaned</string>
    <string name="action_get_on_google_play">Get it on Google Play</string>
    <string name="action_open_filemanager">Open with file manager</string>
    <string name="action_err_open_filemanager">Can\'t open file manager.</string>

    <!-- Dialogs -->
    <string name="dialog_title_gyro_not_found">Gyroscope not found</string>
    <string name="dialog_title_camera_not_installed">Google Camera is not installed</string>
    <string name="dialog_message_gyro_not_found">Camera Cleaner is likely to be useless on your device since the Google Camera require it for taking panoramas</string>
    <string name="dialog_message_camera_not_installed">This app is supposed to be used only with Google Camera</string>

    <!-- Preferences -->
    <string name="pref_key_notification_show">notification_show</string>
    <string name="pref_key_notification_icon">notification_icon</string>

</resources>
