<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/framelayout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_primary"
            android:elevation="@dimen/toolbar_elevation">

            <Button
                android:id="@+id/button_clean"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_ripple"/>

            <TextView
                android:id="@+id/textview_size_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/action_cleaned"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="36sp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_action_brush_large"/>

            <TextView
                android:id="@+id/textview_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginLeft="@dimen/toolbar_horizontal_margin"
                android:layout_marginTop="@dimen/toolbar_vertical_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="20sp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_folders"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="@dimen/cardview_default_elevation"
                app:cardElevation="@dimen/cardview_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_section_folders"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="0.54"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:text="@string/subheader_folders"
                        android:textColor="#000"
                        android:textSize="@dimen/font_size_title"/>

                    <ListView
                        android:id="@+id/listview_folders_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:overScrollMode="never"
                        android:scrollbars="none"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_autodelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:elevation="@dimen/cardview_default_elevation"
                app:cardElevation="@dimen/cardview_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:alpha="0.54"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:text="@string/subheader_autodelete"
                            android:textColor="#000"
                            android:textSize="@dimen/font_size_title"/>

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/switch_autodelete"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.1"
                            android:paddingRight="16dp"/>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkbox_notification_show"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:checked="true"
                        android:text="@string/notification_show"/>

                    <CheckBox
                        android:id="@+id/checkbox_notification_icon"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:checked="true"
                        android:text="@string/notification_icon"/>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:alpha="0.12"
                        android:background="@android:color/black"/>

                    <TextView
                        android:id="@+id/textview_history"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="0.54"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/subheader_history"
                        android:textColor="@android:color/black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/font_size_title"/>

                    <TextView
                        android:id="@+id/textview_history_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.54"
                        android:gravity="center"
                        android:paddingBottom="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/history_empty"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"/>

                    <ListView
                        android:id="@+id/listview_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@null"
                        android:scrollbars="none"
                        tools:visibility="visible"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
